# ml-stock-predictor

./: .gitignore  CLAUDE.md  CODE_EXPLANATION.md  CVictorProjectml-stock-predictoroutputus_local  FAILURE_ANALYSIS_AGENT.md  ML_STOCK_PREDICTOR_EXPLAINED.html  PROTOCOL.md  Phase4_Research_Plan.md  Phase5_Research_Plan.md  README.md  audit_issue8.py  backtest_segments.py  bench_speed.py  build_may_watchlist.py  check_dates.py  check_fold_eligibility.py  dashboard.py  debug_pipeline.py  diag_folds.py  dir_out.txt  download_nse_data.py  download_nse_index_constituents.py  download_nse_marketcap.py  download_us_constituents.py  download_us_data.py  err.txt  evaluate_forward_performance.py  generate_tier_watchlists.py  generate_tv_constituents.py  inspect_data2.py  inspect_hpo.py  momentum_lastdate.parquet  out.txt  out2.txt  out3.txt  out_cv.txt  out_cv2.txt  out_dbg.txt  out_dbg2.txt  paths.yaml  (+35 more)
.claude/: settings.local.json
CVictorProjectml-stock-predictoroutputus_local2023-12-07/: scores_detail_momentum_2023-12-07.json  scores_detail_reversal_2023-12-07.json
api/: forward_eval_server.py
artefacts/: feat_cols.txt  selected_features.txt
bkp_artifacts/: calibrator.pkl  catboost_model.pkl  selected_features.txt
docs/: ARCHITECTURE_DESIGN_DOCUMENT.md  CODE_EXPLANATION.md  CV_EXPLANATION.md  FEATURE_ADDITION_ROADMAP.md  FEATURE_REFERENCE.md  FEATURE_VISUAL_GUIDE.html  MODEL_E2_PREREGISTRATION.md  MODEL_E3_PREREGISTRATION.md  MODEL_E_PREREGISTRATION.md  MODEL_F_PREREGISTRATION.md  PHASE0_AUDIT.md  PIPELINE_FLOW.html  server-setup-guide.html
drafts/: ab_ict_graded.py  (+8 more)
(+785 files in other folders)
