[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ml-stock-predictor"
version = "1.0.0"
description = "Market-agnostic ML ranking pipeline — NSE, S&P 500, NASDAQ"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pyarrow>=12.0.0",
    "scipy>=1.10.0",
    "yfinance>=0.2.30",
    "pandas-market-calendars>=4.3.0",
    "requests>=2.31.0",
    "lightgbm>=4.0.0",
    "scikit-learn>=1.3.0",
    "optuna>=3.3.0",
    "shap>=0.43.0",
    "matplotlib>=3.7.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pipeline*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: integration tests requiring data files",
]

